shift correct-color towards logo-green

--- a/css/zwanzigeins-app.css
+++ b/css/zwanzigeins-app.css
@@ -88,7 +88,7 @@ html.dark-theme{
 }
 
 .numberGame .answer.correct{
-	background: #00b000;
+	background: #22b560;
 	color: white;
 }
 
